Fix nav menu alignment, refactored code

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
@@ -11,10 +11,17 @@
       border-bottom: 3px solid;
     }
   }
-  .hero-banner--border .hero-banner--border-contain {
-    margin-left:0px;
-    margin-right:0px;
+  .formio-sfds .flex-auto{
+    flex: 0 1 auto;
   }
+  .hero-banner--border{
+    margin-bottom: 20px;
+    .hero-banner--border-contain {
+      margin-left:0px;
+      margin-right:0px;
+    }
+  }
+
   [data-source*="checkyourhealthforcitystaff"] .col-md-2 {
     display: none;
   }
